# example-clib-python38

./: .gitignore  CMakeLists.txt
android/: AndroidManifest.xml
include/openssl/: opensslconf.h
lib/android/openssl/: libcrypto.so.1.1  libssl.so.1.1  openssl
resource/python3.8-pyo/: __future__.pyo  __phello__.foo.pyo  _bootlocale.pyo  _collections_abc.pyo  _compat_pickle.pyo  _compression.pyo  _dummy_thread.pyo  _markupbase.pyo  _osx_support.pyo  _py_abc.pyo  _pydecimal.pyo  _pyio.pyo  _sitebuiltins.pyo  _strptime.pyo  _sysconfigdata__linux_.pyo  _threading_local.pyo  _weakrefset.pyo  abc.pyo  aifc.pyo  antigravity.pyo  argparse.pyo  ast.pyo  asynchat.pyo  asyncore.pyo  base64.pyo  bdb.pyo  binhex.pyo  bisect.pyo  bz2.pyo  cProfile.pyo  calendar.pyo  cgi.pyo  cgitb.pyo  chunk.pyo  cmd.pyo  code.pyo  codecs.pyo  codeop.pyo  colorsys.pyo  compileall.pyo  (+132 more)
resource/python3.8-pyo/asyncio/: __init__.pyo  __main__.pyo  base_events.pyo  base_futures.pyo  base_subprocess.pyo  base_tasks.pyo  constants.pyo  coroutines.pyo  events.pyo  exceptions.pyo  format_helpers.pyo  futures.pyo  locks.pyo  log.pyo  proactor_events.pyo  protocols.pyo  queues.pyo  runners.pyo  selector_events.pyo  sslproto.pyo  staggered.pyo  streams.pyo  subprocess.pyo  tasks.pyo  transports.pyo  trsock.pyo  unix_events.pyo  windows_events.pyo  windows_utils.pyo
resource/python3.8-pyo/collections/: __init__.pyo  abc.pyo
resource/python3.8-pyo/ctypes/: __init__.pyo  _aix.pyo  _endian.pyo  util.pyo  wintypes.pyo
resource/python3.8-pyo/curses/: __init__.pyo  ascii.pyo  has_key.pyo  panel.pyo  textpad.pyo
resource/python3.8-pyo/dbm/: __init__.pyo  dumb.pyo  gnu.pyo  ndbm.pyo
resource/python3.8-pyo/distutils/: __init__.pyo  _msvccompiler.pyo  archive_util.pyo  bcppcompiler.pyo  ccompiler.pyo  cmd.pyo  config.pyo  core.pyo  cygwinccompiler.pyo  debug.pyo  dep_util.pyo  dir_util.pyo  dist.pyo  errors.pyo  extension.pyo  fancy_getopt.pyo  file_util.pyo  filelist.pyo  log.pyo  msvc9compiler.pyo  msvccompiler.pyo  spawn.pyo  sysconfig.pyo  text_file.pyo  unixccompiler.pyo  util.pyo  version.pyo  versionpredicate.pyo
resource/python3.8-pyo/email/: __init__.pyo  _encoded_words.pyo  _header_value_parser.pyo  _parseaddr.pyo  _policybase.pyo  base64mime.pyo  charset.pyo  contentmanager.pyo  encoders.pyo  errors.pyo  feedparser.pyo  generator.pyo  header.pyo  headerregistry.pyo  iterators.pyo  message.pyo  parser.pyo  policy.pyo  quoprimime.pyo  utils.pyo
resource/python3.8-pyo/encodings/: __init__.pyo  aliases.pyo  ascii.pyo  base64_codec.pyo  big5.pyo  big5hkscs.pyo  bz2_codec.pyo  charmap.pyo  cp037.pyo  cp1006.pyo  cp1026.pyo  cp1125.pyo  cp1140.pyo  cp1250.pyo  cp1251.pyo  cp1252.pyo  cp1253.pyo  cp1254.pyo  cp1255.pyo  cp1256.pyo  cp1257.pyo  cp1258.pyo  cp273.pyo  cp424.pyo  cp437.pyo  cp500.pyo  cp720.pyo  cp737.pyo  cp775.pyo  cp850.pyo  cp852.pyo  cp855.pyo  cp856.pyo  cp857.pyo  cp858.pyo  cp860.pyo  cp861.pyo  cp862.pyo  cp863.pyo  cp864.pyo  (+83 more)
resource/python3.8-pyo/ensurepip/: __init__.pyo  __main__.pyo  _uninstall.pyo
resource/python3.8-pyo/html/: __init__.pyo  entities.pyo  parser.pyo
resource/python3.8-pyo/http/: __init__.pyo  client.pyo  cookiejar.pyo  cookies.pyo  server.pyo
resource/python3.8-pyo/idlelib/: __init__.pyo  __main__.pyo  autocomplete.pyo  autocomplete_w.pyo  autoexpand.pyo  browser.pyo  calltip.pyo  calltip_w.pyo  codecontext.pyo  colorizer.pyo  config.pyo  config_key.pyo  configdialog.pyo  debugger.pyo  debugger_r.pyo  debugobj.pyo  debugobj_r.pyo  delegator.pyo  dynoption.pyo  editor.pyo  filelist.pyo  format.pyo  grep.pyo  help.pyo  help_about.pyo  history.pyo  hyperparser.pyo  idle.pyo  iomenu.pyo  macosx.pyo  mainmenu.pyo  multicall.pyo  outwin.pyo  parenmatch.pyo  pathbrowser.pyo  percolator.pyo  pyparse.pyo  pyshell.pyo  query.pyo  redirector.pyo  (+19 more)
resource/python3.8-pyo/importlib/: __init__.pyo  _bootstrap.pyo  _bootstrap_external.pyo  abc.pyo  machinery.pyo  metadata.pyo  resources.pyo  util.pyo
resource/python3.8-pyo/json/: __init__.pyo  decoder.pyo  encoder.pyo  scanner.pyo  tool.pyo
resource/python3.8-pyo/lib2to3/: __main__.pyo  btm_matcher.pyo  btm_utils.pyo  fixer_base.pyo  fixer_util.pyo  main.pyo  patcomp.pyo  pygram.pyo  pytree.pyo  refactor.pyo
resource/python3.8-pyo/logging/: __init__.pyo  config.pyo  handlers.pyo
resource/python3.8-pyo/multiprocessing/: __init__.pyo  connection.pyo  context.pyo  forkserver.pyo  heap.pyo  managers.pyo  pool.pyo  popen_fork.pyo  popen_forkserver.pyo  popen_spawn_posix.pyo  popen_spawn_win32.pyo  process.pyo  queues.pyo  reduction.pyo  resource_sharer.pyo  resource_tracker.pyo  shared_memory.pyo  sharedctypes.pyo  spawn.pyo  synchronize.pyo  util.pyo
resource/python3.8-pyo/pydoc_data/: __init__.pyo  topics.pyo
resource/python3.8-pyo/sqlite3/: __init__.pyo  dbapi2.pyo  dump.pyo
resource/python3.8-pyo/tkinter/: __init__.pyo  __main__.pyo  colorchooser.pyo  commondialog.pyo  constants.pyo  dialog.pyo  dnd.pyo  filedialog.pyo  font.pyo  messagebox.pyo  scrolledtext.pyo  simpledialog.pyo  tix.pyo  ttk.pyo
resource/python3.8-pyo/turtledemo/: __init__.pyo  __main__.pyo  bytedesign.pyo  chaos.pyo  clock.pyo  colormixer.pyo  forest.pyo  fractalcurves.pyo  lindenmayer.pyo  minimal_hanoi.pyo  nim.pyo  paint.pyo  peace.pyo  penrose.pyo  planet_and_moon.pyo  rosette.pyo  round_dance.pyo  sorting_animate.pyo  tree.pyo  two_canvases.pyo  yinyang.pyo
resource/python3.8-pyo/unittest/: __init__.pyo  __main__.pyo  async_case.pyo  case.pyo  loader.pyo  main.pyo  mock.pyo  result.pyo  runner.pyo  signals.pyo  suite.pyo  util.pyo
resource/python3.8-pyo/urllib/: error.pyo  parse.pyo  request.pyo  response.pyo  robotparser.pyo
resource/python3.8-pyo/wsgiref/: __init__.pyo  handlers.pyo  headers.pyo  simple_server.pyo  util.pyo  validate.pyo
resource/python3.8-pyo/xml/: __init__.pyo
resource/python3.8-pyo/xmlrpc/: client.pyo  server.pyo
script/: add-prefix-lib.py  change_android_settings.py  freeze-pyc.py
script/python3.8-py/: _sysconfigdata__linux_x86_64-linux-gnu.py
src/: main.cpp  mainwindow.cpp  mainwindow.ui
(+125 files in other folders)
